# Baiku

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
backend/ble/: constants.py  ftms_client.py
backend/cli/: main.py
backend/core/: engine.py  state.py
backend/ui/: app.py  coaching.py  controller.py  game_layer.py  web_app.py
backend/ui/assets/: bike_only.html  bike_preview_standalone.html
backend/ui/assets/parallax/: ATTRIBUTION.md
backend/utils/: logger.py
backend/workout/: library.py  model.py  parser.py  runner.py  session_artifacts.py  session_store.py  user_workouts.py
openclaw/: agents.md  run_mvp_workflow.sh  workflow.md
tests/: test_coaching.py  test_ftms_parsing.py  test_game_layer.py  test_session_artifacts.py  test_session_store.py  test_simulated_ht.py  test_ui_e2e_scenarios.py  test_user_workouts.py  test_workout_library.py  test_workout_parser.py
